--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,6 @@
+<!--
+https://www.figma.com/design/fStD6jM4HJaocbMiHDGGnb/Learnico-(Copy)?node-id=0-1&t=5R7mhfPfnS7QLWD7-0
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,6 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,600;9..40,700&family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="style-icon.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
   </head>
@@ -84,7 +89,16 @@
                   <img src="./img/img05.png" alt="">
                 </div>
               </div>
-              <div class="reviews__rating"></div>
+              <div class="reviews__rating">
+                <div class="reviews__rating__rat">
+                  <i class="icon-star-full"></i>
+                  <i class="icon-star-full"></i>
+                  <i class="icon-star-full"></i>
+                  <i class="icon-star-full"></i>
+                  <i class="icon-star-half"></i>
+                </div>
+                <p class="reviews__rating-text">From 3k+ reviews</p>
+              </div>
             </div>
           </div>
 
@@ -97,6 +111,7 @@
                     src="./video/video.mp4" >
 
             </video>
+            <img class="content__video__bg" src="./img/section1icon.svg" alt="">
           </div>
         </div>
       </div>
